--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   	background: linear-gradient(to bottom,
     rgb(0,0,0,0),
     rgba(0,0,0,.8)),
-    url('/images/books_1200.jpg');
+    url('images/books_1200.jpg');
     background-repeat:no-repeat;
     background-size:cover;
   	}
