--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   	background: linear-gradient(to bottom,
     rgb(0,0,0,0),
     rgba(0,0,0,.8)),
-    url('images/books_1200.jpg');
+    url('http://www.mensahdesigns.com/images/bootstrapper/books_1200.jpg');
     background-repeat:no-repeat;
     background-size:cover;
   	}
@@ -52,7 +52,7 @@
   	background: linear-gradient(to bottom,
     rgb(0,0,0,0),
     rgba(0,0,0,.8)),
-    url('/images/baseball_1200.jpg');
+    url('http://www.mensahdesigns.com/images/bootstrapper/baseball_1200.jpg');
     background-repeat:no-repeat;
     background-size:cover;
   	}
@@ -73,7 +73,7 @@
   	background: linear-gradient(to bottom,
     rgb(0,0,0,0),
     rgba(0,0,0,.8)),
-    url('/images/bench.jpg');
+    url('http://www.mensahdesigns.com/images/bootstrapper/bench.jpg');
     background-repeat:no-repeat;
     background-size:cover;
   	}
@@ -83,7 +83,7 @@
   	background: linear-gradient(to bottom,
     rgb(0,0,0,0),
     rgba(0,0,0,.8)),
-    url('/images/type.jpg');
+    url('http://www.mensahdesigns.com/images/bootstrapper/type.jpg');
     background-repeat:no-repeat;
     background-size:cover;
   	}
@@ -179,7 +179,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a href="#"><img class="logomini" src="/images/BLogo.png" alt="bootstrapper_logo_mini"></a>
+      <a href="#"><img class="logomini" src="http://www.mensahdesigns.com/images/bootstrapper/BLogo.png" alt="bootstrapper_logo_mini"></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -199,7 +199,7 @@
 <!-- BOOKS FEATURE -->
 <div class= "boner"> 
 <a href="http://www.mensahdesigns.com">
-  <img class="logonator" src="/images/BLogo.png" alt="bootstrapper_logo" style="width:242px;height:242px;border:0;">
+  <img class="logonator" src="http://www.mensahdesigns.com/images/bootstrapper/BLogo.png" alt="bootstrapper_logo" style="width:242px;height:242px;border:0;">
 
 </a>
 <span class="blurb">
