--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   	background: linear-gradient(to bottom,
     rgb(0,0,0,0),
     rgba(0,0,0,.8)),
-    url('http://www.mensahdesigns.com/images/bootstrapper/baseball_1200.jpg');
+    url('images/baseball_1200.jpg');
     background-repeat:no-repeat;
     background-size:cover;
   	}
